Add role for collecting pods logs
Change-Id: I83f86839d15e61f815428ff7218b2a0a685c6791
Co-Authored-By: Radosław Piliszek <rpiliszek@7bulls.com>

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -22,6 +22,7 @@
     roles:
       - zuul: zuul/zuul-jobs
     pre-run: playbooks/helm/pre.yaml
+    post-run: playbooks/kubernetes/post.yaml
     vars:
       helm_version: *helm_version
       kubernetes_runtime: cri-o
