Add empty jobs for handling java libraries publishing
Change-Id: I78f9bb47a8585f05fe6020b9881c46cfc07ba3dc

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -26,3 +26,15 @@
     vars:
       helm_version: *helm_version
       kubernetes_runtime: cri-o
+
+- job:
+    name: nebulous-build-java-libraries
+    run: playbooks/java-libraries/build.yaml
+
+- job:
+    name: nebulous-upload-java-libraries
+    run: playbooks/java-libraries/upload.yaml
+
+- job:
+    name: nebulous-promote-java-libraries
+    run: playbooks/java-libraries/promote.yaml
