Switch the java library build job to the proposed schema
Change-Id: I546744f30b223f20beb49943ea67ed625ae8966b

--- a/playbooks/java-libraries/build.yaml
+++ b/playbooks/java-libraries/build.yaml
@@ -6,9 +6,9 @@
     - name: Build the project with Maven
       shell: mvn clean install -DskipTests
       args:
-        chdir: "{{ project_path }}"  # Pointing to the directory with pom.xml
+        chdir: "{{ library_path }}"  # Pointing to the directory with pom.xml
       vars:
-        project_path: "{{ zuul.project.src_dir }}/{{ java_library_path }}"
+        library_path: "{{ zuul.project.src_dir }}/{{ java_libraries[0].context }}"
       environment:
         MAVEN_HOME: "/opt/apache-maven-3.8.8"
         PATH: "{{ ansible_env.PATH }}:/opt/apache-maven-3.8.8/bin"
