--- a/playbooks/java-libraries/build.yaml
+++ b/playbooks/java-libraries/build.yaml
@@ -1,7 +1,7 @@
 - hosts: all
   roles:
-    - install_jdk
-    - maven
+    - install-jdk
+    - install-maven
   tasks:
     - name: Build the project with Maven
       shell: mvn clean install -DskipTests
