Delete skiping tests from build job
Change-Id: Iecacd7a0be5bc286da8e83148495289aa3327edf

--- a/playbooks/java-libraries/build.yaml
+++ b/playbooks/java-libraries/build.yaml
@@ -4,7 +4,7 @@
     - install-maven
   tasks:
     - name: Build the project with Maven
-      shell: mvn clean install -DskipTests
+      shell: mvn clean install
       args:
         chdir: "{{ library_path }}"  # Pointing to the directory with pom.xml
       vars:
