Quick fix for the previous commit
Change-Id: Idb638ef82496c6c8e1115f2e5d444fb56060a736

--- a/roles/collect-kubernetes-state/tasks/main.yaml
+++ b/roles/collect-kubernetes-state/tasks/main.yaml
@@ -9,7 +9,7 @@
   failed_when: false
 
 - name: Collect typical relevant state (yaml)
-  shell: "kubectl get all -A -o yaml > > {{ ansible_user_dir }}/zuul-output/logs/k8s/state.yaml"
+  shell: "kubectl get all -A -o yaml > {{ ansible_user_dir }}/zuul-output/logs/k8s/state.yaml"
   failed_when: false
 
 - name: Open k8s state permissions
