--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -31,6 +31,7 @@
               - ^playbooks/helm/
               - ^playbooks/kubernetes/
               - ^roles/collect-kubernetes-pods-logs/
+              - ^roles/collect-kubernetes-state/
         - opendev-buildset-registry:
             files: *nebulous-component-template-apply-helm-charts-files
 
