Use the default minikube driver (docker)
To fix issues with the upstream way of doing it directly on the
host.
This also makes the logic much simpler.
Fixes at least the CoreDNS containers not starting issue.

Change-Id: I6ef651b1df972c7021d9f304a2479ae97e51696c

--- a/playbooks/helm/pre.yaml
+++ b/playbooks/helm/pre.yaml
@@ -1,3 +1,10 @@
 - hosts: all
   roles:
     - role: use-buildset-registry
+    - role: clear-firewall
+    - role: ensure-docker
+    - role: ensure-minikube
+    - role: ensure-helm
+  tasks:
+    - name: Start minikube
+      command: minikube start
