--- a/playbooks/kubernetes/post.yaml
+++ b/playbooks/kubernetes/post.yaml
@@ -1,4 +1,5 @@
 - hosts: all
   roles:
+    - collect-container-logs  # for some of minikube logs
     - collect-kubernetes-state
     - collect-kubernetes-pods-logs
