Use max cpus and memory in minikube
Change-Id: I264a7cfe6902d4e8ced7134775c6c6ff87acd667

--- a/playbooks/helm/pre.yaml
+++ b/playbooks/helm/pre.yaml
@@ -7,4 +7,4 @@
     - role: ensure-helm
   tasks:
     - name: Start minikube
-      command: minikube start
+      command: minikube start --cpus max --memory max
