Collect more minikube logs
Change-Id: I0de07ab45c08b80427b018455879724ff239ddb1

--- a/playbooks/kubernetes/post.yaml
+++ b/playbooks/kubernetes/post.yaml
@@ -1,5 +1,6 @@
 - hosts: all
   roles:
     - collect-container-logs  # for some of minikube logs
+    - collect-minikube-logs
     - collect-kubernetes-state
     - collect-kubernetes-pods-logs
