Replace also minikube kubelet config.json
To pass auth settings.

Also, change the crio restart to HUP to avoid unnecessary extra
work.

Change-Id: Ib93e9be3819ac0c49455cfb2fc38758c80e12ca8

--- a/playbooks/helm/pre.yaml
+++ b/playbooks/helm/pre.yaml
@@ -14,12 +14,8 @@
         - name: Copy registries.conf from the host to minikube
           command: minikube cp /etc/containers/registries.conf /etc/containers/registries.conf
 
-        - name: Restart minikube crio daemon
-          command: minikube ssh sudo systemctl restart crio
+        - name: Signal new config to minikube crio daemon
+          command: "minikube ssh 'sudo pkill -HUP crio'"
 
-        - name: Wait for minikube k8s API to be back up
-          command: kubectl get node
-          register: _result
-          until: _result is not failed
-          retries: 30
-          delay: 10
+    - name: Replace minikube kubelet config.json
+      shell: minikube cp ~/.docker/config.json /var/lib/kubelet/config.json
