Add buildset registry to minikube /etc/hosts
Change-Id: I24b2b909817e5e8970ef61eaf91218eec2147fc3

--- a/playbooks/helm/pre.yaml
+++ b/playbooks/helm/pre.yaml
@@ -9,6 +9,9 @@
     - name: Start minikube
       command: minikube start --cpus max --memory max --container-runtime cri-o
 
+    - name: Add buildset registry to minikube /etc/hosts
+      command: "minikube ssh 'echo -e \"\n{{ buildset_registry.host }}\tzuul-jobs.buildset-registry\" | sudo tee -a /etc/hosts'"
+
     - name: Replace minikube registries.conf
       block:
         - name: Copy registries.conf from the host to minikube
