--- a/playbooks/helm/run.yaml
+++ b/playbooks/helm/run.yaml
@@ -11,7 +11,7 @@
         chdir: "{{ zuul.project.src_dir }}"
 
     - name: Install helm charts
-      command: "helm install {{ helm_release_name }} {{ helm_chart }}"
+      command: "helm install {{ helm_release_name }} {{ helm_chart }} --wait --wait-for-jobs"
       vars:
         helm_release_name: "{{ zj_item.key }}"
         helm_chart: "{{ zj_item.value }}"
@@ -20,13 +20,6 @@
         loop_var: 'zj_item'
       args:
         chdir: "{{ zuul.project.src_dir }}"
-
-    - name: Wait for the deployments
-      command: kubectl wait --for=condition=Available --timeout=300s deployment --all
-
-    - name: Wait for the remaining resources
-      include_role:
-        name: wait-for-pods
 
     - name: Check pod restarts after helm chart installations
       include_role:
