--- a/roles/hadolint/tasks/main.yaml
+++ b/roles/hadolint/tasks/main.yaml
@@ -1,6 +1,14 @@
 - name: Lint Dockerfile with Hadolint
+  # NOTE(rpiliszek): We are excluding rules that force version pinning in distribution package managers.
+  # These rules actually do *not* follow the best practices of Dockerfile writing.
   ansible.builtin.command: >-
-    hadolint {{ item }}
+    hadolint
+    --ignore DL3008
+    --ignore DL3018
+    --ignore DL3033
+    --ignore DL3037
+    --ignore DL3041
+    {{ item }}
   args:
     chdir: "{{ zuul_work_dir }}"
   changed_when: false
